--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
         <div class="link-section">
 
-            <div class="category">
-                <h2>常用工具</h2>
-                <div class="links">
-                    <a href="https://fanyi.google.com/" target="_blank">谷歌翻译</a>
-                    <a href="https://www.deepl.com/translator" target="_blank">DeepL</a>
-                    <a href="https://chatgpt.com/" target="_blank">ChatGPT</a>
-                </div>
-            </div>
+ <div class="category">
+    <h2 class="category-title">常用工具</h2>
 
+    <div class="links collapsible-content">
+        <a href="https://fanyi.google.com/" target="_blank">谷歌翻译</a>
+        <a href="https://www.deepl.com/translator" target="_blank">DeepL</a>
+        <a href="https://chatgpt.com/" target="_blank">ChatGPT</a>
+    </div>
+</div>
             <div class="category">
                 <h2>影音娱乐</h2>
                 <div class="links">
